# iedit

./: .gitignore  Cargo.toml  LICENSE.md  README.md  iedit.py  myprogram.py  something.js  test_input.py
.github/workflows/: bump-formula.yml  release.yml
Formula/: iedit.rb
iedit_core/: Cargo.toml
iedit_core/src/: lib.rs  main.rs  terminal.rs
iedit_core/src/editor/: command.rs  config.rs  cursor.rs  edit.rs  input.rs  io.rs  mod.rs  render.rs  selection.rs  state.rs  viewport.rs
iedit_core/src/line/: char_vec.rs  mod.rs  renderer.rs  string.rs
iedit_document/: Cargo.toml
iedit_document/src/: io.rs  lib.rs
iedit_document/src/document/: builtin_languages.rs  find.rs  mod.rs  syntax.rs  vocab.rs
iedit_document/src/document/edit/: delete.rs  insert.rs  mod.rs
iedit_document/src/edit/: delete.rs  insert.rs  mod.rs
iedit_document/src/line/: char_indexable.rs  mod.rs  string.rs
iedit_editor/: Cargo.toml  build.rs
iedit_editor/src/: config.rs  input.rs  lib.rs  main.rs  terminal.rs
iedit_editor/src/editor/: autocomplete.rs  clipboard.rs  command.rs  config.rs  cursor.rs  edit.rs  highlight.rs  input.rs  io.rs  keybindings.rs  line_renderer.rs  mod.rs  render.rs  search.rs  state.rs  status.rs  viewport.rs
iedit_editor/src/editor/commands/: execute.rs  mod.rs  move_cursor.rs  notify.rs
iedit_editor/src/editor/modes/: goto.rs  insert.rs  mod.rs  prompt.rs  search.rs
iedit_editor/src/editor/renderer/: edit_buffer.rs  legacy_line_renderer.rs  line.rs  mod.rs  popup.rs  status.rs
iedit_editor2/: Cargo.toml
iedit_editor2/src/: input.rs  lib.rs  main.rs
iedit_editor2/src/editor/: config.rs  cursor.rs  io.rs  mod.rs  status.rs  viewport.rs
iedit_editor2/src/editor/commands/: edit.rs  mod.rs  move_cursor.rs
iedit_editor2/src/editor/modes/: goto.rs  insert.rs  mod.rs  prompt.rs  search.rs
iedit_editor2/src/editor/renderer/: edit_buffer.rs  legacy_line_renderer.rs  mod.rs  status.rs
iedit_macros/: Cargo.toml
iedit_macros/src/: lib.rs
regex-lite/src/: pikevm.rs  string.rs
src/: main.rs
src/editor/: command.rs  config.rs  cursor.rs  edit.rs  input.rs  io.rs  mod.rs  movement.rs  render.rs  state.rs  viewport.rs
syntax/: go.syntax  json.syntax  lua.syntax  proto.syntax  toml.syntax  yml.syntax
termion/src/: event.rs  raw.rs
