[workspace]
members = [
    "iedit_core",
    "iedit_macros",
]
default-members = ["iedit_core"]
resolver = "2"

[workspace.dependencies]
termion = "4.0"

# Internal workspace dependencies
iedit_core = { path = "./iedit_core" }
iedit_macros = { path = "./iedit_macros" }

# Proc macro dependencies (used by iedit_macros)
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
