[workspace]
members = ["iedit_document", "iedit_macros", "iedit_editor"]
default-members = ["iedit_editor"]
resolver = "2"

[workspace.dependencies]
regex-lite = "0.1.8"
termion = "4.0"
iedit_macros = { path = "./iedit_macros" }
iedit_document = { path = "./iedit_document" }

# Proc macro dependencies (used by iedit_macros)
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"