[workspace]
members = ["iedit_document", "iedit_macros", "iedit_editor"]
default-members = ["iedit_editor"]
resolver = "2"

[profile.release]
codegen-units = 1
debug = "full"
lto = true
opt-level = "s"
panic = "abort"
split-debuginfo = "packed"
strip = "symbols"
incremental = true

[workspace.dependencies]
regex-lite = "0.1.8"
termion = "4.0"
iedit_macros = { path = "./iedit_macros" }
iedit_document = { path = "./iedit_document" }

# Proc macro dependencies (used by iedit_macros)
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[patch.crates-io]
termion = { path = "./termion" }
regex-lite = { path = "./regex-lite" }
