[package]
name = "iedit_editor"
version = "0.5.0"
edition = "2024"

[dependencies]
iedit_macros = { workspace = true }
iedit_document = { workspace = true }
termion = { workspace = true }
regex-lite = { workspace = true }
crossbeam-channel = "0.5.15"
signal-hook = { version = "0.3.18", features = [] }

[[bin]]
name = "iedit"
path = "src/main.rs"